Make username-related operations blocking